--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>PHI networks</title>
+    <title>ITlogic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
