--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/shark.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/laptop-solid.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="תוכנה לניהול IT" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/shark512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/laptop-solid.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -18,10 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;700&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <title>ITlogic's</title>
   </head>
   <body>
